--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
+
 body{
     background-color: black;
     color: white;
@@ -9,9 +11,12 @@ body{
 
 .container{
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 20px;
     margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Montserrat';
 }
 
 .titulo{
